# knowledge-distillation

./: .gitignore  LICENSE  README.md  pyproject.toml
finetuning/: data_utils.py  model_utils.py  test.py  train.py
knowledge-distillation-pipeline/: data_utils.py  model_utils.py  run.py  train.py  utils.py  validate.py
